--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
@@ -159,7 +159,6 @@ ol {
   vertical-align: middle;
   background: none;
   border: 1px solid #fff;
-  /* position: relative; */
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
@@ -167,8 +166,6 @@ ol {
   background-color: #fff;
   height: 15px;
   width: 15px;
-  /* position: absolute;
-  inset: 1px; */
   display: block;
   margin-top: 1px;
   margin-left: 1px;
